--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -22,11 +24,15 @@ android {
     }
 
     // If you need to add more flavors, consider using flavor dimensions.
+    flavorDimensions "flavor"
     productFlavors {
         mock {
+            dimension "flavor"
+
             applicationIdSuffix = ".mock"
         }
         prod {
+            dimension "flavor"
 
         }
     }
@@ -52,6 +58,9 @@ android {
  all versions in a single place. This improves readability and helps managing project complexity.
  */
 dependencies {
+    // Kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     // App's dependencies, including test
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
